Domains Transfers: Fix align for labels (#79645)

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
@@ -253,6 +253,7 @@
 			&.is-first-row {
 				display: inline-block;
 				white-space: nowrap;
+				line-height: 24px;
 			}
 
 			@media (max-width: $break-medium ) {
